--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:server": "nodemon --exec babel-node src/server/server.js --ignore dist/",
-    "dev:bundler": "webpack -w --mode=development"
+    "dev-server": "webpack --mode=production && node dist/server.bundle.js",
+    "dev": "webpack -w --mode=development"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.1",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "d3-path": "^2.0.0",
+    "d3-selection": "^2.0.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,7 +34,10 @@
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
@@ -39,7 +46,12 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "nodemon": "^2.0.6",
-    "prettier": "2.2.0"
+    "postcss": "^8.1.10",
+    "postcss-loader": "^4.1.0",
+    "postcss-nested": "^5.0.1",
+    "prettier": "2.2.0",
+    "style-loader": "^2.0.0"
   }
 }
