--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "autoprefixer": "^10.0.4",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.1",
     "babel-plugin-react-css-modules": "^5.2.6",
     "d3-path": "^2.0.0",
@@ -30,6 +31,10 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^5.0.1",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   },
