--- a/package.json
+++ b/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "investigation-board",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev-server": "webpack --mode=production && node dist/server.bundle.js",
-    "dev": "webpack -w --mode=development"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pushkarskayarita/investigation-board.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pushkarskayarita/investigation-board/issues"
-  },
-  "homepage": "https://github.com/pushkarskayarita/investigation-board#readme",
-  "dependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "autoprefixer": "^10.0.4",
-    "axios": "^0.21.0",
-    "babel-loader": "^8.2.1",
-    "babel-plugin-react-css-modules": "^5.2.6",
-    "d3-path": "^2.0.0",
-    "d3-selection": "^2.0.0",
-    "express": "^4.17.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "serialize-javascript": "^5.0.1",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
-    "nodemon": "^2.0.6",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.1.0",
-    "postcss-nested": "^5.0.1",
-    "prettier": "2.2.0",
-    "style-loader": "^2.0.0"
-  }
+    "name": "investigation-board",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "develop": "webpack-dev-server --open",
+        "build": "webpack"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/pushkarskayarita/investigation-board.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/pushkarskayarita/investigation-board/issues"
+    },
+    "homepage": "https://github.com/pushkarskayarita/investigation-board#readme",
+    "dependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/node": "^7.12.6",
+        "@babel/preset-env": "^7.12.7",
+        "@babel/preset-react": "^7.12.7",
+        "autoprefixer": "^10.0.4",
+        "axios": "^0.21.0",
+        "babel-loader": "^8.2.1",
+        "babel-plugin-react-css-modules": "^5.2.6",
+        "d3-path": "^2.0.0",
+        "d3-selection": "^2.0.0",
+        "dexie": "^3.0.3",
+        "express": "^4.17.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
+        "serialize-javascript": "^5.0.1"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "babel-eslint": "^10.1.0",
+        "css-loader": "^5.0.1",
+        "css-minimizer-webpack-plugin": "^1.1.5",
+        "eslint": "^7.2.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.0.0",
+        "html-webpack-plugin": "^4.5.1",
+        "mini-css-extract-plugin": "^1.3.1",
+        "nodemon": "^2.0.6",
+        "postcss": "^8.1.10",
+        "postcss-loader": "^4.1.0",
+        "postcss-nested": "^5.0.1",
+        "prettier": "2.2.0",
+        "style-loader": "^2.0.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
