--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "develop": "webpack-dev-server --open",
-        "build": "webpack"
+        "build": "webpack",
+        "server": "node ./src/server.js"
     },
     "repository": {
         "type": "git",
@@ -49,6 +50,7 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.0.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.1",
         "mini-css-extract-plugin": "^1.3.1",
         "nodemon": "^2.0.6",
