--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
         "redux": "^4.0.5",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "serialize-javascript": "^5.0.1"
     },
