--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "d3-selection": "^2.0.0",
         "dexie": "^3.0.3",
         "express": "^4.17.1",
+        "nanoid": "^3.1.23",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
