--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "develop": "webpack-dev-server --open",
         "build": "webpack",
+        "deploy": "gh-pages -d dist",
         "server": "node ./src/server.js",
         "test": "jest --watch"
     },
@@ -18,7 +19,7 @@
     "bugs": {
         "url": "https://github.com/pushkarskayarita/investigation-board/issues"
     },
-    "homepage": "https://github.com/pushkarskayarita/investigation-board#readme",
+    "homepage": "https://pushkarskayarita.github.io/investigation-board",
     "dependencies": {
         "@babel/core": "^7.12.9",
         "@babel/node": "^7.12.6",
@@ -60,6 +61,7 @@
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.0.0",
         "file-loader": "^6.2.0",
+        "gh-pages": "^3.2.3",
         "html-webpack-plugin": "^4.5.1",
         "jest": "^27.2.1",
         "mini-css-extract-plugin": "^1.3.1",
