--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "investigation-board",
+    "homepage": "https://pushkarskayarita.github.io/investigation-board/",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "develop": "webpack-dev-server --open",
-        "build": "webpack",
+        "develop": "cross-env NODE_ENV=development webpack-dev-server --open",
+        "build": "cross-env NODE_ENV=production webpack",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
         "server": "node ./src/server.js",
         "test": "jest --watch"
@@ -19,7 +21,6 @@
     "bugs": {
         "url": "https://github.com/pushkarskayarita/investigation-board/issues"
     },
-    "homepage": "https://pushkarskayarita.github.io/investigation-board",
     "dependencies": {
         "@babel/core": "^7.12.9",
         "@babel/node": "^7.12.6",
@@ -51,6 +52,7 @@
         "@testing-library/user-event": "^13.2.1",
         "babel-eslint": "^10.1.0",
         "babel-jest": "^27.2.1",
+        "cross-env": "^7.0.3",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
         "eslint": "^7.2.0",
